@@ -1,3 +1,7 @@
+Change in GNU Prolog version 1.2.4:
+
+* no longer use dl_malloc on Linux but prevent MMAP using mallopt
+
 Change in GNU Prolog version 1.2.3:
 
 * added acos/asin to Prolog arithmetics
