@@ -1,3 +1,7 @@
+Fri Oct 13 17:46:38 CEST 2000 <Daniel.Diaz@inria.fr>
+
+	* no longer use dl_malloc on Linux but prevent MMAP using mallopt
+	
 Tue Sep 12 15:42:48 CEST 2000 <Daniel.Diaz@inria.fr>
 
 	* full re-indentation of the sources for CVS
